{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 82,
  "lineage": "60fc1b47-28eb-b416-cf3d-1b820d26d57e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:773364929699:loadbalancer/production-nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "production-nginx-elb-1478575614.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "production-nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-01b75accbcab0a189",
              "i-0571b194088368781",
              "i-05d6b5a2689530974",
              "i-05d9fd6956ec678dd",
              "i-07fafb6241afeac36",
              "i-0bbce77c88bbe1d13"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "production-nginx-elb",
            "security_groups": [
              "sg-0850abd9c53f1c91a"
            ],
            "source_security_group": "773364929699/nginx_elb_sg",
            "source_security_group_id": "sg-0850abd9c53f1c91a",
            "subnets": [
              "subnet-012dd0692c6c6cb1b",
              "subnet-06a63ce2d66ec5f6d",
              "subnet-0d14283018a5b45db"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-0bbce77c88bbe1d13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-0bbce77c88bbe1d13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d08bea88ff89a34",
            "private_dns": "ip-10-2-0-162.ec2.internal",
            "private_ip": "10.2.0.162",
            "public_dns": "ec2-3-236-195-189.compute-1.amazonaws.com",
            "public_ip": "3.236.195.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c8877701bdb5714",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d14283018a5b45db",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-05d9fd6956ec678dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-05d9fd6956ec678dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d68d687372cccb4d",
            "private_dns": "ip-10-2-1-137.ec2.internal",
            "private_ip": "10.2.1.137",
            "public_dns": "ec2-35-171-162-67.compute-1.amazonaws.com",
            "public_ip": "35.171.162.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084b42234e9e9f1b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a63ce2d66ec5f6d",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-0571b194088368781",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-0571b194088368781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a275506af0dc9556",
            "private_dns": "ip-10-2-2-158.ec2.internal",
            "private_ip": "10.2.2.158",
            "public_dns": "ec2-54-91-235-106.compute-1.amazonaws.com",
            "public_ip": "54.91.235.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0043db85b46a0caa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012dd0692c6c6cb1b",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx3"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-05d6b5a2689530974",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-05d6b5a2689530974",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f3079d39337a367",
            "private_dns": "ip-10-2-0-73.ec2.internal",
            "private_ip": "10.2.0.73",
            "public_dns": "ec2-34-201-22-252.compute-1.amazonaws.com",
            "public_ip": "34.201.22.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0786718bf1d66c07c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d14283018a5b45db",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx4"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-01b75accbcab0a189",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-01b75accbcab0a189",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2c207b3f68c8b9d",
            "private_dns": "ip-10-2-1-28.ec2.internal",
            "private_ip": "10.2.1.28",
            "public_dns": "ec2-54-173-4-29.compute-1.amazonaws.com",
            "public_ip": "54.173.4.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060064394ce996b10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a63ce2d66ec5f6d",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx5"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:773364929699:instance/i-07fafb6241afeac36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production_nginx_profile",
            "id": "i-07fafb6241afeac36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00d67643576a16eae",
            "private_dns": "ip-10-2-2-6.ec2.internal",
            "private_ip": "10.2.2.6",
            "public_dns": "ec2-3-88-142-91.compute-1.amazonaws.com",
            "public_ip": "3.88.142.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad1fdcefa384bca9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012dd0692c6c6cb1b",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx6"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-nginx6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3c8915aa972b83e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:internet-gateway/igw-0c160b63235a4acfb",
            "id": "igw-0c160b63235a4acfb",
            "owner_id": "773364929699",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-igw"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-igw"
            },
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:route-table/rtb-0547c0b5f3e0aa9df",
            "id": "rtb-0547c0b5f3e0aa9df",
            "owner_id": "773364929699",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c160b63235a4acfb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0754fa6c7a5870e91",
            "route_table_id": "rtb-0547c0b5f3e0aa9df",
            "subnet_id": "subnet-0d14283018a5b45db"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10e1a01dc075da9",
            "route_table_id": "rtb-0547c0b5f3e0aa9df",
            "subnet_id": "subnet-06a63ce2d66ec5f6d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06386f29348f0d530",
            "route_table_id": "rtb-0547c0b5f3e0aa9df",
            "subnet_id": "subnet-012dd0692c6c6cb1b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:security-group/sg-0850abd9c53f1c91a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0850abd9c53f1c91a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "773364929699",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:security-group/sg-0c3c8915aa972b83e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3c8915aa972b83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "773364929699",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:subnet/subnet-0d14283018a5b45db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0d14283018a5b45db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773364929699",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet1"
            },
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:subnet/subnet-06a63ce2d66ec5f6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-06a63ce2d66ec5f6d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773364929699",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet2"
            },
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:subnet/subnet-012dd0692c6c6cb1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-012dd0692c6c6cb1b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773364929699",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet3"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-subnet3"
            },
            "vpc_id": "vpc-03f84839a81d83202"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773364929699:vpc/vpc-03f84839a81d83202",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0185e955be3f9379c",
            "default_route_table_id": "rtb-0cec23880880759f4",
            "default_security_group_id": "sg-0d082b78b24d9c7f4",
            "dhcp_options_id": "dopt-0a874e73e3585c6ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03f84839a81d83202",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cec23880880759f4",
            "owner_id": "773364929699",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-vpc"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "production",
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}